components/ingress-rules/production/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: fia
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
        - reduce.isis.cclrc.ac.uk
      secretName: prod-reduce-isis-tls
  rules:
  - host: reduce.isis.cclrc.ac.uk
    http:
      paths:
      - path: /f-i-a/?(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: scigateway-service
            port:
              number: 80
      - path: /data-viewer/?(.*)
        pathType: Prefix
        backend:
          service:
            name: data-viewer-service
            port:
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/limit-rps: "10"
spec:
  tls:
    - hosts:
        - reduce.isis.cclrc.ac.uk
      secretName: prod-reduce-isis-tls
  rules:
    - host: reduce.isis.cclrc.ac.uk
      http:
        paths:
          - path: /auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: fia-auth-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/limit-rps: "25"
spec:
  tls:
    - hosts:
        - reduce.isis.cclrc.ac.uk
      secretName: prod-reduce-isis-tls
  rules:
    - host: reduce.isis.cclrc.ac.uk
      http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: fia-api-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plotting-service-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/limit-rps: "100"
spec:
  tls:
    - hosts:
        - reduce.isis.cclrc.ac.uk
      secretName: prod-reduce-isis-tls
  rules:
    - host: reduce.isis.cclrc.ac.uk
      http:
        paths:
          - path: /plottingapi/?(.*)
            pathType: Prefix
            backend:
              service:
                name: plotting-service-service
                port:
                  number: 80
