components/ingress-rules/production/plotting-service-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plotting-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth  # added manually as just on staging
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - foo'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /plottingapi/?(.*)
        pathType: Prefix
        backend:
          service:
            name: plotting-service-service
            port:
              number: 80
